# sloth-bytes-weekly-challenges

./: Makefile  README.md  pyproject.toml
challenges/2025/17/: README.md  main.py  test.py  tests.json
challenges/2025/18/: README.md  main.py  test.py  tests.json
challenges/2025/19/: README.md  main.py  test.py  tests.json
challenges/2025/20/: README.md  main.py  test.py  tests.json
challenges/2025/21/: README.md  main.py  test.py  tests.json
challenges/2025/22/: README.md  main.py  test.py  tests.json
challenges/2025/23/: README.md  main.py  test.py  tests.json
challenges/2025/24/: README.md  main.py  test.py  tests.json
challenges/2025/25/: README.md  main.py  test.py  tests.json
challenges/2025/26/: README.md  main.py  test.py  tests.json
challenges/2025/27/: README.md  main.py  test.py  tests.json
scripts/: new_week.py
template/: test.py  tests.json
